# OpenCL_Helper

./: .gitignore  README.md
Lect01. vector_addition/: OpenCL_Vector_Addition(CPP_style).cpp  OpenCL_Vector_Addition(CPU vs GPU).cpp  OpenCL_Vector_Addition(nvidia_sample).cpp  vector_add_kernel.cl
Lect01. vector_addition/kernel/: vector_add_kernel.cl
Lect01. vector_addition/src/: main.cpp
Lect02. matrix_multiplication/: CMakeLists.txt  OpenCL_Matmul(C_style).cpp  OpenCL_Matrix_Multiplication(CPP_style).cpp  matmul_kernel.cl  vector_matmul_kernel.cl
Lect02. matrix_multiplication/kernel/: matmul_kernel.cl
Lect02. matrix_multiplication/src/: main.cpp  mat.hpp  ocl.hpp
Lect03. image_rotation/: CMakeLists.txt  bmpfuncs.cpp  bmpfuncs.h
Lect03. image_rotation/kernel/: img_rotation_kernel.cl
Lect03. image_rotation/src/: bitmap.hpp  main.cpp  ocl.cpp
Lect04. Buffer object vs Image object/: CMakeLists.txt  kernel.cl  main.cpp  ocl.cpp  ocl.h
Lect04. Buffer object vs Image object/kernel/: kernel.cl
Lect04. Buffer object vs Image object/src/: main.cpp  ocl.cpp  ocl.hpp
src/Lect01. vector_addition/: OpenCL_Vector_Addition(CPP_style).cpp  OpenCL_Vector_Addition(C_style).cpp
src/Lect03. image_rotation/: OpenCL_Img_Rotation(CPP_Style).cpp  img_rotation_kernel.cl
